--- a/Boutique-FE/package.json
+++ b/Boutique-FE/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^18.0.0",
     "boutique-fe": "file:",
     "firebase": "^11.1.0",
+    "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.0"
